B&L QA/objects/Installed_Equipments__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Installed Equipments</relationshipLabel>
        <relationshipName>Installed_Equipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Equipment_Code__c</fullName>
        <formula>Equipments__r.Equipment_Code__c</formula>
        <label>Equipment Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipments__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equipments</label>
        <referenceTo>Equipments_Master_List__c</referenceTo>
        <relationshipLabel>Installed Equipments</relationshipLabel>
        <relationshipName>Installed_Equipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Installation_Date__c</fullName>
        <label>Installation Date</label>
        <type>Date</type>
    </fields>
    <label>Installed Equipments</label>
    <nameField>
        <displayFormat>Eq-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Installed Equipments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>